# straylight

./: .hlint.yaml  cabal.project  fourmolu.yaml  readme.md  straylight.cabal  test.stray
experiments/: generate_welltyped.hs
src/: Core.hs  Elab.hs  Main.hs  Order.hs  Parse.hs  Pretty.hs  Superpos.hs  Tests.hs  Unif.hs
test/: Spec.hs
